--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       margin: 0;
       font-family: 'Inter', sans-serif;
       min-height: 100vh;
-      background: linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-        url('https://source.unsplash.com/1600x900/?nature,landscape');
+      background-image:
+        linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+        url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?auto=format&fit=crop&w=1600&q=80');
       background-size: cover;
       background-position: center;
       display: flex;
@@ -20,40 +21,17 @@
       text-align: center;
       padding: 20px;
     }
-    .card {
-      max-width: 700px;
-    }
-    .verse {
-      font-size: 1.6rem;
-      line-height: 1.5;
-      margin-bottom: 15px;
-    }
-    .reference {
-      font-size: 1rem;
-      opacity: 0.9;
-      cursor: pointer;
-    }
-    .controls {
-      margin-top: 20px;
-      display: flex;
-      gap: 12px;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
+    .card { max-width: 720px; }
+    .verse { font-size: 1.6rem; line-height: 1.5; margin-bottom: 14px; }
+    .reference { font-size: 1rem; opacity: 0.9; cursor: pointer; }
+    .controls { margin-top: 18px; display: flex; gap: 12px; justify-content: center; flex-wrap: wrap; }
     button {
       background: rgba(255,255,255,0.15);
-      border: 1px solid rgba(255,255,255,0.3);
-      color: #fff;
-      padding: 8px 14px;
-      border-radius: 8px;
-      font-size: 0.9rem;
+      border: 1px solid rgba(255,255,255,0.35);
+      color: #fff; padding: 8px 14px; border-radius: 10px; font-size: 0.9rem;
     }
     button:active { transform: scale(0.97); }
-    .date {
-      margin-top: 15px;
-      font-size: 0.8rem;
-      opacity: 0.7;
-    }
+    .date { margin-top: 14px; font-size: 0.8rem; opacity: 0.7; }
   </style>
 </head>
 <body>
@@ -66,29 +44,29 @@
     </div>
     <div class="date" id="date"></div>
   </div>  <script>
-    const versions = ['ESV', 'MSG'];
+    const versions = ['ESV']; // MSG not supported by this API; we’ll fall back safely
 
     async function loadVerse() {
-      const version = versions[Math.floor(Math.random() * versions.length)];
-      const response = await fetch(`https://labs.bible.org/api/?passage=random&type=json&version=${version}`);
-      const data = await response.json();
-      const v = data[0];
-
-      document.getElementById('verse').textContent = `“${v.text.trim()}”`;
-      document.getElementById('reference').textContent = `${v.bookname} ${v.chapter}:${v.verse} (${version})`;
-      document.getElementById('reference').onclick = () => {
-        window.open(`https://www.biblegateway.com/passage/?search=${v.bookname}+${v.chapter}:${v.verse}&version=${version}`);
-      };
+      try {
+        const version = versions[Math.floor(Math.random() * versions.length)];
+        const response = await fetch(`https://labs.bible.org/api/?passage=random&type=json&version=${version}`);
+        const data = await response.json();
+        const v = data[0];
+        document.getElementById('verse').textContent = `“${v.text.trim()}”`;
+        document.getElementById('reference').textContent = `${v.bookname} ${v.chapter}:${v.verse} (${version})`;
+        document.getElementById('reference').onclick = () => {
+          window.open(`https://www.biblegateway.com/passage/?search=${v.bookname}+${v.chapter}:${v.verse}&version=${version}`);
+        };
+      } catch (e) {
+        document.getElementById('verse').textContent = 'Unable to load verse. Tap refresh.';
+        document.getElementById('reference').textContent = '';
+      }
     }
 
     function shareVerse() {
       const text = document.getElementById('verse').textContent + ' ' + document.getElementById('reference').textContent;
-      if (navigator.share) {
-        navigator.share({ text });
-      } else {
-        navigator.clipboard.writeText(text);
-        alert('Verse copied to clipboard');
-      }
+      if (navigator.share) navigator.share({ text });
+      else { navigator.clipboard.writeText(text); alert('Verse copied'); }
     }
 
     document.getElementById('date').textContent = new Date().toDateString();
